--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dark"
-    tools:context=".splash.SplashFragment">
+    tools:context=".splash.presentation.ui.SplashFragment">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/animation_loading"
