--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,11 +2,14 @@
 <resources>
     <dimen name="dimen_4">4dp</dimen>
     <dimen name="dimen_8">8dp</dimen>
+    <dimen name="dimen_16">16dp</dimen>
     <dimen name="dimen_20">20dp</dimen>
     <dimen name="dimen_24">24dp</dimen>
     <dimen name="dimen_48">48dp</dimen>
-    <dimen name="dimen_200">200dp</dimen>
     <dimen name="dimen_150">150dp</dimen>
+    <dimen name="dimen_200">200dp</dimen>
+    <dimen name="dimen_250">250dp</dimen>
 
     <dimen name="text_dimen_16">16sp</dimen>
+    <dimen name="text_dimen_20">20sp</dimen>
 </resources>
